# CardPDFGenerator

./: .gitignore  CMakeLists.txt  CardPDFGenerator.cpp  CardPDFGenerator.h  LICENSE.txt  README.md  card_utils.cpp  card_utils.h  clay.h  clay_utils.h  copies.py  main.cpp  settings_io.h  ui.cpp  vcpkg.json
